$Id$

2014-06-27  Christian Franke  <franke@computer.org>

	configure.ac: Suppress pkg-config warnings about missing 'systemd.pc'.
	Makefile.am: Silence build of man pages and svnversion.h.
	This makes '--enable-silent-rules' or 'make V=0' more effective
	(available since automake 1.13).

2014-06-27  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Crucial/Micron RealSSD C300/M500: New attributes (ticket #326)
	- SandForce Driven SSDs: ADATA XM11, Corsair Force LS, OWC Aura Pro 6G
	  OWC Mercury Electra Pro 3G, PNY Prevail Elite, Transcend SSD320/720

2014-06-25  Christian Franke  <franke@computer.org>

	os_win32.cpp: Fix calculation of SCSI resid.

2014-06-23  Christian Franke  <franke@computer.org>

	scsiata.cpp: usbjmicron_device: Fix SMART Status check for USB bridges
	which always return 0x01.  Add JMicron specific error messages.

2014-06-22  Christian Franke  <franke@computer.org>

	atacmds.cpp, ataprint.cpp: Improve messages for unsupported SMART Status
	command.
	ataprint.cpp: Print form factor.

2014-06-21  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Crucial/Micron M500/M510/M550 Client SSDs
	- Micron M500DC Enterprise SSDs
	Based on patch provided by Clayton Hawkings from Micron.

2014-06-20  Christian Franke  <franke@computer.org>

	autogen.sh: automake 1.14.1 works.

2014-06-20  Christian Franke  <franke@computer.org>

	scsiata.cpp: usbjmicron_device: Check SCSI resid for SMART STATUS.
	Some (Prolific) USB bridges do not transfer a status byte.
	os_win32.cpp: Include SCSI resid in debug output.

2014-06-19  Douglas Gilbert  <dgilbert@interlog.com>

	scsiprint.cpp:
	- minor comment clean-up

2014-06-19  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Intel 730 and DC S3500/S3700 Series SSDs: rename, add 730 and S3700.
	Remove extra S3700 entry.  Based on patch provided by Tim Small.

2014-06-18  Christian Franke  <franke@computer.org>

	os_win32.cpp: Fix CSMI support for older Intel RST drivers which set